# lboot

./: .gitignore  Cargo.toml  README-en.md  README-zh.md  README.en.md  README.md  lboot-install.sh  lboot.qemu.toml  lboot.toml  rust-toolchain.toml
.cargo/: config.toml
lboot-test-runner/: Cargo.toml
lboot-test-runner/examples/: config_test.rs  menu_test.rs
lboot-test-runner/src/: lib.rs
src/: config.rs  error.rs  image.rs  lib.rs  main.rs  menu.rs
test/: qemu_run.sh
test/ovmf/aarch64/: shell.efi
test/ovmf/x86_64/: code.fd  shell.efi  vars.fd
