[package]
name = "lboot-test-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
uefi = { version = "0.24", features = ["alloc"] }
uefi-services = "0.21"
qemu-exit = "3.0.2"
lboot = { path=".." }
